Added Bootstrap term

--- a/work.html
+++ b/work.html
@@ -82,7 +82,7 @@
     <div class="col-md-6"><a href="https://jolly-cori-46a19e.netlify.app/"><img src="images/weather-app.PNG" alt="weather-project-preview" class="img-fluid shadow-md p-4 border rounded" /></a>
     <h3>Weather App</h3>
     <h6>Find out the weather in your area and around the world!</h6>
-    <p>Created using HTML, CSS, Vanilla JS, and API</p>
+    <p>Created using HTML, CSS, Vanilla JS, Bootstrap, and API</p>
     <div class="navigation-links text-center">
       <a href="https://jolly-cori-46a19e.netlify.app/" class="btn btn-branding mt-0 mb-3">Launch Weather App</a>
     </div>
@@ -92,7 +92,7 @@
     <div class="col-md-6"><a href="https://nostalgic-hoover-d17535.netlify.app/"><img src="images/react-weather-app.PNG" alt="weather-react-project-preview" class="img-fluid shadow-md p-2 border rounded" /></a>
       <h3>React Weather App</h3>
       <h6>Another weather service app to find out the weather where you are or may be going.</h6>
-      <p>Created using HTML, CSS, React.js and API</p>
+      <p>Created using HTML, CSS, React.js, Bootstrap, and API</p>
       <div class="navigation-links text-center">
         <a href="https://nostalgic-hoover-d17535.netlify.app/" class="btn btn-branding mt-0 mb-3">Launch Weather App 2.0</a>
     </div>
@@ -100,7 +100,7 @@
     <div class="col-md-6"><a href="https://eager-shaw-cf3651.netlify.app/"><img src="images/react-dictionary-app.PNG" alt="dictionary-react-project-preview" class="img-fluid shadow-md p-2 border rounded" /></a>
       <h3>React Dictionary App</h3>
       <h6>Find the definition of a word... any word, go on, give it a try!😊</h6>
-      <p>Created using HTML, CSS, React.js and API</p>
+      <p>Created using HTML, CSS, React.js, and API</p>
     <div class="navigation-links text-center">
       <a href="https://eager-shaw-cf3651.netlify.app/" class="btn btn-branding mt-0 mb-5">Launch Dictionary App</a>
     </div>
@@ -110,7 +110,7 @@
     <div class="col-md-6"><a href="https://practical-leakey-597752.netlify.app/"><img src="images/book-portfolio.PNG" alt="books-website-project-preview" class="img-fluid shadow-md p-2 border rounded" /></a>
       <h3>Book Website</h3>
       <h6>Website about my books with links to purchase. Get your copies!</h6>
-      <p>Created using HTML, CSS, Vanilla JS, and Figma</p>
+      <p>Created using HTML, CSS, Vanilla JS, Flexbox, and Figma</p>
     <div class="navigation-links text-center">
       <a href="https://practical-leakey-597752.netlify.app/" class="btn btn-branding mt-0 mb-5">Launch Book Website</a>
     </div>
@@ -118,7 +118,7 @@
     <div class="col-md-6"><a href="https://silly-yonath-cc0f85.netlify.app/"><img src="images/broker-website.PNG" alt="real-estate-website-project-preview" class="img-fluid shadow-md p-2 border rounded" height="374" /></a>
       <h3>Real Estate Broker Website</h3>
       <h6>Website for real estate broker, Marcus Rice.</h6>
-      <p>Created using HTML, CSS</p>
+      <p>Created using HTML, CSS, and Bootstrap</p>
       <!-- make coming soon image if needed -->
     <div class="navigation-links text-center">
       <a href="https://silly-yonath-cc0f85.netlify.app/" class="btn btn-branding mt-0 mb-5">Launch Real Estate Broker Website</a>
