--- a/work.html
+++ b/work.html
@@ -71,14 +71,16 @@
   </div>
   <div class="project-description p-3">
   <div class="row">
-    <div class="col-md-6"><a href="https://www.shecodes.io/workshops/shecodes-online-workshop-68-0/projects/361592"><img src="images/book-page.PNG" alt="short-story-project-preview" class="img-fluid shadow-md p-2 border rounded" /></a>
+    
+    <!-- <div class="col-md-6"><a href="https://www.shecodes.io/workshops/shecodes-online-workshop-68-0/projects/361592"><img src="images/book-page.PNG" alt="short-story-project-preview" class="img-fluid shadow-md p-2 border rounded" /></a>
       <h3>Free Short Story Website</h3>
       <h6>Find out more about my short story.</h6>
       <p>Created using HTML, CSS, and Vanilla JS</p>
     <div class="navigation-links text-center">
       <a href="https://www.shecodes.io/workshops/shecodes-online-workshop-68-0/projects/361592" class="btn btn-branding mt-0 mb-5">Launch Short Story Website</a>
     </div>
-    </div>
+    </div> -->
+
     <div class="col-md-6"><a href="https://jolly-cori-46a19e.netlify.app/"><img src="images/weather-app.PNG" alt="weather-project-preview" class="img-fluid shadow-md p-4 border rounded" /></a>
     <h3>Weather App</h3>
     <h6>Find out the weather in your area and around the world!</h6>
@@ -87,7 +89,27 @@
       <a href="https://jolly-cori-46a19e.netlify.app/" class="btn btn-branding mt-0 mb-3">Launch Weather App</a>
     </div>
   </div>
+
+  <div class="col-md-6"><a href="https://eager-shaw-cf3651.netlify.app/"><img src="images/react-dictionary-app.PNG" alt="dictionary-react-project-preview" class="img-fluid shadow-md p-2 border rounded" /></a>
+    <h3>React Dictionary App</h3>
+    <h6>Find the definition of a word... any word, go on, give it a try!😊</h6>
+    <p>Created using HTML, CSS, React.js, and API</p>
+  <div class="navigation-links text-center">
+    <a href="https://eager-shaw-cf3651.netlify.app/" class="btn btn-branding mt-0 mb-5">Launch Dictionary App</a>
   </div>
+</div>
+
+  <!-- <div class="col-md-6"><a href="https://nostalgic-hoover-d17535.netlify.app/"><img src="images/react-weather-app.PNG" alt="weather-react-project-preview" class="img-fluid shadow-md p-2 border rounded" /></a>
+    <h3>React Weather App</h3>
+    <h6>Another weather service app to find out the weather where you are or may be going.</h6>
+    <p>Created using HTML, CSS, React.js, Bootstrap, and API</p>
+    <div class="navigation-links text-center">
+      <a href="https://nostalgic-hoover-d17535.netlify.app/" class="btn btn-branding mt-0 mb-3">Launch Weather App 2.0</a>
+  </div>
+  </div> -->
+
+  </div>
+  
   <div class="row mt-3">
     <div class="col-md-6"><a href="https://nostalgic-hoover-d17535.netlify.app/"><img src="images/react-weather-app.PNG" alt="weather-react-project-preview" class="img-fluid shadow-md p-2 border rounded" /></a>
       <h3>React Weather App</h3>
@@ -97,25 +119,7 @@
         <a href="https://nostalgic-hoover-d17535.netlify.app/" class="btn btn-branding mt-0 mb-3">Launch Weather App 2.0</a>
     </div>
     </div>
-    <div class="col-md-6"><a href="https://eager-shaw-cf3651.netlify.app/"><img src="images/react-dictionary-app.PNG" alt="dictionary-react-project-preview" class="img-fluid shadow-md p-2 border rounded" /></a>
-      <h3>React Dictionary App</h3>
-      <h6>Find the definition of a word... any word, go on, give it a try!😊</h6>
-      <p>Created using HTML, CSS, React.js, and API</p>
-    <div class="navigation-links text-center">
-      <a href="https://eager-shaw-cf3651.netlify.app/" class="btn btn-branding mt-0 mb-5">Launch Dictionary App</a>
-    </div>
-  </div>
-</div>
-    <div class="row mt-3">
-    <div class="col-md-6"><a href="https://practical-leakey-597752.netlify.app/"><img src="images/book-portfolio.PNG" alt="books-website-project-preview" class="img-fluid shadow-md p-2 border rounded" /></a>
-      <h3>Book Website</h3>
-      <h6>Website about my books with links to purchase. Get your copies!</h6>
-      <p>Created using HTML, CSS, Vanilla JS, Flexbox, and Figma</p>
-    <div class="navigation-links text-center">
-      <a href="https://practical-leakey-597752.netlify.app/" class="btn btn-branding mt-0 mb-5">Launch Book Website</a>
-    </div>
-  </div>
-    <div class="col-md-6"><a href="https://silly-yonath-cc0f85.netlify.app/"><img src="images/broker-website.PNG" alt="real-estate-website-project-preview" class="img-fluid shadow-md p-2 border rounded" height="374" /></a>
+    <div class="col-md-6"><a href="https://silly-yonath-cc0f85.netlify.app/"><img src="images/broker-website-1.PNG" alt="real-estate-website-project-preview" class="img-fluid shadow-md p-2 border rounded" height="374" /></a>
       <h3>Real Estate Broker Website</h3>
       <h6>Website for real estate broker, Marcus Rice.</h6>
       <p>Created using HTML, CSS, and Bootstrap</p>
@@ -124,6 +128,27 @@
       <a href="https://silly-yonath-cc0f85.netlify.app/" class="btn btn-branding mt-0 mb-5">Launch Real Estate Broker Website</a>
     </div>
     </div>
+
+</div>
+
+    <div class="row mt-3">
+    <div class="col-md-6"><a href="https://www.tonyarice.com/"><img src="images/TCR-author-pg-UPDATED.PNG" alt="books-website-project-preview" class="img-fluid shadow-md p-2 border rounded" height="374" /></a>
+      <h3>Author Website</h3>
+      <h6>Website about my books with links to purchase. Get your copies!</h6>
+      <p>Created using HTML, CSS, Vanilla JS, Flexbox, and Figma</p>
+    <div class="navigation-links text-center">
+      <a href="https://www.tonyarice.com/" class="btn btn-branding mt-0 mb-5">Launch Author Website</a>
+    </div>
+  </div>
+  <div class="col-md-6"><a href="https://fervent-kowalevski-c9306c.netlify.app/"><img src="images/TCR-realtor-pg1.PNG" alt="real-estate-website-project-preview" class="img-fluid shadow-md p-2 border rounded" height="374" /></a>
+    <h3>Real Estate Agent Website</h3>
+    <h6>Website for real estate agent, Tonya Rice.</h6>
+    <p>Created using HTML, CSS, Bootstrap, Flexbox, and Figma</p>
+    <!-- make coming soon image if needed -->
+  <div class="navigation-links text-center">
+    <a href="https://fervent-kowalevski-c9306c.netlify.app/" class="btn btn-branding mt-0 mb-5">Launch Real Estate Agent Website</a>
+  </div>
+  </div>
   </div>
 </div>
 </div>
