link update - work page

--- a/work.html
+++ b/work.html
@@ -132,7 +132,7 @@
 </div>
 
     <div class="row mt-3">
-    <div class="col-md-6"><a href="https://www.tonyarice.com/"><img src="images/TCR-author-pg-UPDATED.PNG" alt="books-website-project-preview" class="img-fluid shadow-md p-2 border rounded" height="374" /></a>
+    <div class="col-md-6"><a href="http://www.tonyarice.com/"><img src="images/TCR-author-pg-UPDATED.PNG" alt="books-website-project-preview" class="img-fluid shadow-md p-2 border rounded" height="374" /></a>
       <h3>Author Website</h3>
       <h6>Website about my books with links to purchase. Get your copies!</h6>
       <p>Created using HTML, CSS, Vanilla JS, Flexbox, and Figma</p>
@@ -140,7 +140,7 @@
       <a href="https://www.tonyarice.com/" class="btn btn-branding mt-0 mb-5">Launch Author Website</a>
     </div>
   </div>
-  <div class="col-md-6"><a href="https://www.tonyaricerealtor.com/"><img src="images/TCR-realtor-pg1.PNG" alt="real-estate-website-project-preview" class="img-fluid shadow-md p-2 border rounded" height="374" /></a>
+  <div class="col-md-6"><a href="http://www.tonyaricerealtor.com/"><img src="images/TCR-realtor-pg1.PNG" alt="real-estate-website-project-preview" class="img-fluid shadow-md p-2 border rounded" height="374" /></a>
     <h3>Real Estate Agent Website</h3>
     <h6>Website for real estate agent, Tonya Rice.</h6>
     <p>Created using HTML, CSS, Bootstrap, Flexbox, and Figma</p>
