updated links on work page

--- a/work.html
+++ b/work.html
@@ -132,7 +132,7 @@
 </div>
 
     <div class="row mt-3">
-    <div class="col-md-6"><a href="http://www.tonyarice.com/"><img src="images/TCR-author-pg-UPDATED.PNG" alt="books-website-project-preview" class="img-fluid shadow-md p-2 border rounded" height="374" /></a>
+    <div class="col-md-6"><a href="https://www.tonyarice.com/"><img src="images/TCR-author-pg-UPDATED.PNG" alt="books-website-project-preview" class="img-fluid shadow-md p-2 border rounded" height="374" /></a>
       <h3>Author Website</h3>
       <h6>Website about my books with links to purchase. Get your copies!</h6>
       <p>Created using HTML, CSS, Vanilla JS, Flexbox, and Figma</p>
@@ -146,7 +146,7 @@
     <p>Created using HTML, CSS, Bootstrap, Flexbox, and Figma</p>
     <!-- make coming soon image if needed -->
   <div class="navigation-links text-center">
-    <a href="https://www.tonyaricerealtor.com/" class="btn btn-branding mt-0 mb-5">Launch Real Estate Agent Website</a>
+    <a href="http://www.tonyaricerealtor.com/" class="btn btn-branding mt-0 mb-5">Launch Real Estate Agent Website</a>
   </div>
   </div>
   </div>
