--- a/work.html
+++ b/work.html
@@ -125,7 +125,7 @@
       <p>Created using HTML, CSS, and Bootstrap</p>
       <!-- make coming soon image if needed -->
     <div class="navigation-links text-center">
-      <a href="https://silly-yonath-cc0f85.netlify.app/" class="btn btn-branding mt-0 mb-5">Launch Real Estate Broker Website</a>
+      <a href="https://www.marcusrice.net" class="btn btn-branding mt-0 mb-5">Launch Real Estate Broker Website</a>
     </div>
     </div>
 
