updated domain names

--- a/work.html
+++ b/work.html
@@ -119,13 +119,13 @@
         <a href="https://nostalgic-hoover-d17535.netlify.app/" class="btn btn-branding mt-0 mb-3">Launch Weather App 2.0</a>
     </div>
     </div>
-    <div class="col-md-6"><a href="https://www.marcusrice.net"><img src="images/broker-website-1.PNG" alt="real-estate-website-project-preview" class="img-fluid shadow-md p-2 border rounded" height="374" /></a>
+    <div class="col-md-6"><a href="http://www.marcusrice.net"><img src="images/broker-website-1.PNG" alt="real-estate-website-project-preview" class="img-fluid shadow-md p-2 border rounded" height="374" /></a>
       <h3>Real Estate Broker Website</h3>
       <h6>Website for real estate broker, Marcus Rice.</h6>
       <p>Created using HTML, CSS, and Bootstrap</p>
       <!-- make coming soon image if needed -->
     <div class="navigation-links text-center">
-      <a href="https://www.marcusrice.net" class="btn btn-branding mt-0 mb-5">Launch Real Estate Broker Website</a>
+      <a href="http://www.marcusrice.net" class="btn btn-branding mt-0 mb-5">Launch Real Estate Broker Website</a>
     </div>
     </div>
 
