updated domain name - agent site

--- a/work.html
+++ b/work.html
@@ -140,13 +140,13 @@
       <a href="https://www.tonyarice.com/" class="btn btn-branding mt-0 mb-5">Launch Author Website</a>
     </div>
   </div>
-  <div class="col-md-6"><a href="http://www.tonyaricerealtor.com/"><img src="images/TCR-realtor-pg1.PNG" alt="real-estate-website-project-preview" class="img-fluid shadow-md p-2 border rounded" height="374" /></a>
+  <div class="col-md-6"><a href="https://www.tonyaricerealtor.com/"><img src="images/TCR-realtor-pg1.PNG" alt="real-estate-website-project-preview" class="img-fluid shadow-md p-2 border rounded" height="374" /></a>
     <h3>Real Estate Agent Website</h3>
     <h6>Website for real estate agent, Tonya Rice.</h6>
     <p>Created using HTML, CSS, Bootstrap, Flexbox, and Figma</p>
     <!-- make coming soon image if needed -->
   <div class="navigation-links text-center">
-    <a href="http://www.tonyaricerealtor.com/" class="btn btn-branding mt-0 mb-5">Launch Real Estate Agent Website</a>
+    <a href="https://www.tonyaricerealtor.com/" class="btn btn-branding mt-0 mb-5">Launch Real Estate Agent Website</a>
   </div>
   </div>
   </div>
