removed domain name from images on work page

--- a/work.html
+++ b/work.html
@@ -81,7 +81,7 @@
     </div>
     </div> -->
 
-    <div class="col-md-6"><a href="https://jolly-cori-46a19e.netlify.app/"><img src="images/weather-app.PNG" alt="weather-project-preview" class="img-fluid shadow-md p-4 border rounded" /></a>
+    <div class="col-md-6"><a href="#"><img src="images/weather-app.PNG" alt="weather-project-preview" class="img-fluid shadow-md p-4 border rounded" /></a>
     <h3>Weather App</h3>
     <h6>Find out the weather in your area and around the world!</h6>
     <p>Created using HTML, CSS, Vanilla JS, Bootstrap, and API</p>
@@ -90,7 +90,7 @@
     </div>
   </div>
 
-  <div class="col-md-6"><a href="https://eager-shaw-cf3651.netlify.app/"><img src="images/react-dictionary-app.PNG" alt="dictionary-react-project-preview" class="img-fluid shadow-md p-2 border rounded" /></a>
+  <div class="col-md-6"><a href="#"><img src="images/react-dictionary-app.PNG" alt="dictionary-react-project-preview" class="img-fluid shadow-md p-2 border rounded" /></a>
     <h3>React Dictionary App</h3>
     <h6>Find the definition of a word... any word, go on, give it a try!😊</h6>
     <p>Created using HTML, CSS, React.js, and API</p>
@@ -111,7 +111,7 @@
   </div>
   
   <div class="row mt-3">
-    <div class="col-md-6"><a href="https://nostalgic-hoover-d17535.netlify.app/"><img src="images/react-weather-app.PNG" alt="weather-react-project-preview" class="img-fluid shadow-md p-2 border rounded" /></a>
+    <div class="col-md-6"><a href="#"><img src="images/react-weather-app.PNG" alt="weather-react-project-preview" class="img-fluid shadow-md p-2 border rounded" /></a>
       <h3>React Weather App</h3>
       <h6>Another weather service app to find out the weather where you are or may be going.</h6>
       <p>Created using HTML, CSS, React.js, Bootstrap, and API</p>
@@ -119,7 +119,7 @@
         <a href="https://nostalgic-hoover-d17535.netlify.app/" class="btn btn-branding mt-0 mb-3">Launch Weather App 2.0</a>
     </div>
     </div>
-    <div class="col-md-6"><a href="https://www.marcusrice.net"><img src="images/broker-website-1.PNG" alt="real-estate-website-project-preview" class="img-fluid shadow-md p-2 border rounded" height="374" /></a>
+    <div class="col-md-6"><a href="#"><img src="images/broker-website-1.PNG" alt="real-estate-website-project-preview" class="img-fluid shadow-md p-2 border rounded" height="374" /></a>
       <h3>Real Estate Broker Website</h3>
       <h6>Website for real estate broker, Marcus Rice.</h6>
       <p>Created using HTML, CSS, and Bootstrap</p>
@@ -132,7 +132,7 @@
 </div>
 
     <div class="row mt-3">
-    <div class="col-md-6"><a href="https://www.tonyarice.com/"><img src="images/TCR-author-pg-UPDATED.PNG" alt="books-website-project-preview" class="img-fluid shadow-md p-2 border rounded" height="374" /></a>
+    <div class="col-md-6"><a href="#"><img src="images/TCR-author-pg-UPDATED.PNG" alt="books-website-project-preview" class="img-fluid shadow-md p-2 border rounded" height="374" /></a>
       <h3>Author Website</h3>
       <h6>Website about my books with links to purchase. Get your copies!</h6>
       <p>Created using HTML, CSS, Vanilla JS, Flexbox, and Figma</p>
@@ -140,7 +140,7 @@
       <a href="https://www.tonyarice.com/" class="btn btn-branding mt-0 mb-5">Launch Author Website</a>
     </div>
   </div>
-  <div class="col-md-6"><a href="https://www.tonyaricerealtor.com/"><img src="images/TCR-realtor-pg1.PNG" alt="real-estate-website-project-preview" class="img-fluid shadow-md p-2 border rounded" height="374" /></a>
+  <div class="col-md-6"><a href="#"><img src="images/TCR-realtor-pg1.PNG" alt="real-estate-website-project-preview" class="img-fluid shadow-md p-2 border rounded" height="374" /></a>
     <h3>Real Estate Agent Website</h3>
     <h6>Website for real estate agent, Tonya Rice.</h6>
     <p>Created using HTML, CSS, Bootstrap, Flexbox, and Figma</p>
