Add My Work button link to home page

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     <h2>🇺🇸 Front-end developer, based in the U.S.A.</h2>
     </div>
     <div class="col text-center">
+    <a href="/work.html" class="btn btn-branding mt-3" id="work-btn">My Work</a>
     <a href="/contact.html" class="btn btn-branding mt-3">Contact Me</a>
   </div>
     
