More About page updates
switched college info: MFA first, BA second

--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
 Based in Virginia, I am also an author and Realtor. After assuming the responsibilities of designing, developing, and maintaining my real estate brokerage's website, I decided to advance my web skills. I am pursuing an opportunity in tech as a Technical Editor. I have a strong attention to detail and many years of copy editing and proofreading experience. I am open to work in this capacity with any web development company or web development department of any organization, especially a non-profit, an online real estate firm, home design and decor firm, entertainment company, or book/literary entity.
 <br />
 <br />
-I received my B.A. in Social Sciences from Hollins University and my M.F.A. in Creative Writing (Fiction emphasis) from National University. My short story anthology and series are available through Amazon and other online stores. My latest novel is in progress.
+I received my M.F.A. in Creative Writing (Fiction emphasis) from National University and my B.A. in Social Sciences from Hollins University. My books are available through Amazon and other online stores. My latest novel is in progress.
 <br />
 <br />
 When I'm not writing or coding, I enjoy using my time power walking, reading novels, trying new recipes, watching sports (<i>Go Braves! Go Steelers!</i>), getting lost in classic movies, and spending time with my family and our cats.😺
