--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Contact Tonya Rice. She is a front-end developer based in Virginia.">
+    <meta name="description" content="Contact Tonya Rice. She is a UX Designer and Content Editor based in Virginia.">
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-1GZ8E1C7RN"></script>
 <script>
@@ -14,7 +14,7 @@
 
   gtag('config', 'G-1GZ8E1C7RN');
 </script>
-    <title>Contact Me | Tonya Rice, Front End Developer</title>
+    <title>Contact Me | Tonya Rice - UX Designer, Content Editor</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -154,7 +154,7 @@
       target="_blank"
       class="hyperlink-line"
       >Netlify</a
-    > | © 2021
+    > | © 2021 - 2023
     </span>
     <br />
       <!-- <span class="photo-credit white-text">Photo by Marcus Rice</span> -->
