--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Tonya is a front-end developer based in Virginia. She is experienced in HTML, CSS, JS, React, and Bootstrap.">
+    <meta name="description" content="Tonya is a UX Designer and Content Editor based in Virginia. She is experienced in Copy Editing, HTML, CSS, and Bootstrap.">
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-1GZ8E1C7RN"></script>
 <script>
@@ -14,7 +14,7 @@
 
   gtag('config', 'G-1GZ8E1C7RN');
 </script>
-    <title>Tonya Rice | Front End Developer</title>
+    <title>Tonya Rice | UX Designer, Content Editor</title>
     <link rel="icon" href="images/T-dev-logo5 (1).png" />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -53,7 +53,7 @@
                   <a class="nav-link" href="/work.html">Work</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://practical-leakey-597752.netlify.app/" target="_blank">Books</a>
+                    <a class="nav-link" href="https://www.tonyarice.com/" target="_blank">Books</a>
                   </li> 
                   <!-- or link to project page -->
                 <li class="nav-item">
@@ -67,11 +67,11 @@
             </div>
           </div>
         </nav> 
-      
+    
 </div>
       <div class="dev-info">
     <h1>Tonya Rice</h1>
-    <h2>🇺🇸 Front-end developer, based in the U.S.A.</h2>
+    <h2>UX Designer | Content Editor</h2>
     </div>
     <div class="col text-center">
     <a href="/work.html" class="btn btn-branding mt-3" id="work-btn">My Work</a>
@@ -96,7 +96,7 @@
           target="_blank"
           class="hyperlink-line"
           >Netlify</a
-        > | © 2021
+        > | © 2021 - 2023
         </span>
         <br />
           <span class="photo-credit white-text">Photo by Marcus Rice</span>
