--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Featured websites developed by Tonya Rice. Tonya is a front-end developer based in Virginia.">
+    <meta name="description" content="Featured websites developed by Tonya Rice. Tonya is a UX Designer and Content Editor based in Virginia.">
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-1GZ8E1C7RN"></script>
 <script>
@@ -14,7 +14,7 @@
 
   gtag('config', 'G-1GZ8E1C7RN');
 </script>
-    <title>Featured Projects | Tonya Rice, Front End Developer</title>
+    <title>Featured Projects | Tonya Rice - UX Designer, Content Editor</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -81,7 +81,7 @@
     </div>
     </div> -->
 
-    <div class="col-md-6"><a href="#"><img src="images/weather-app.PNG" alt="weather-project-preview" class="img-fluid shadow-md p-4 border rounded" /></a>
+    <div class="col-md-6"><a href="#"><img src="images/weather-app.PNG" alt="weather-project-preview" class="img-fluid shadow-md p-4 border rounded" height="374" /></a>
     <h3>Weather App</h3>
     <h6>Find out the weather in your area and around the world!</h6>
     <p>Created using HTML, CSS, Vanilla JS, Bootstrap, and API</p>
@@ -90,14 +90,23 @@
     </div>
   </div>
 
-  <div class="col-md-6"><a href="#"><img src="images/react-dictionary-app.PNG" alt="dictionary-react-project-preview" class="img-fluid shadow-md p-2 border rounded" /></a>
+  <div class="col-md-6"><a href="#"><img src="images/TCR-author-pg-UPDATED.PNG" alt="books-website-project-preview" class="img-fluid shadow-md p-2 border rounded" height="374" /></a>
+    <h3>Author Website</h3>
+    <h6>Website about my books with links to purchase. Get your copies!</h6>
+    <p>Created using HTML, CSS, Vanilla JS, Flexbox, and Figma</p>
+  <div class="navigation-links text-center">
+    <a href="https://www.tonyarice.com/" class="btn btn-branding mt-0 mb-5">Launch Author Website</a>
+  </div>
+</div>
+
+  <!-- <div class="col-md-6"><a href="#"><img src="images/react-dictionary-app.PNG" alt="dictionary-react-project-preview" class="img-fluid shadow-md p-2 border rounded" /></a>
     <h3>React Dictionary App</h3>
     <h6>Find the definition of a word... any word, go on, give it a try!😊</h6>
     <p>Created using HTML, CSS, React.js, and API</p>
   <div class="navigation-links text-center">
     <a href="https://eager-shaw-cf3651.netlify.app/" class="btn btn-branding mt-0 mb-5">Launch Dictionary App</a>
   </div>
-</div>
+</div> -->
 
   <!-- <div class="col-md-6"><a href="https://nostalgic-hoover-d17535.netlify.app/"><img src="images/react-weather-app.PNG" alt="weather-react-project-preview" class="img-fluid shadow-md p-2 border rounded" /></a>
     <h3>React Weather App</h3>
