--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
                   <a class="nav-link" href="/work.html">Work</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://practical-leakey-597752.netlify.app/" target="_blank">Books</a>
+                    <a class="nav-link" href="https://www.tonyarice.com/" target="_blank">Books</a>
                   </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/contact.html">Contact</a>
