--- a/about.html
+++ b/about.html
@@ -68,15 +68,15 @@
   <h2>Profile - Tonya Rice</h2>
 
 <div class="white-text">
-<p>I am a Front End Developer, experienced in HTML, CSS, Vanilla JS, React.js, Bootstrap, CSS Grid, Flexbox, Git, GitHub, API, SEO, and Responsive Web Design. I also work with Figma and Canva for design enhancement. My certifications from SheCodes Workshops include Front End Development, React Development, and Responsive Web Design. <br />
+<p>I am a UX Designer and Content Editor, experienced in HTML, CSS, Vanilla JS, React.js, Bootstrap, CSS Grid, Flexbox, Git, GitHub, API, SEO, and Responsive Web Design. I also work with Figma and Canva for design enhancement. My certifications from SheCodes Workshops include Front End Development, React Development, and Responsive Web Design. <br />
 <br />
-Based in Virginia, I am also an author and Realtor. After assuming the responsibilities of designing, developing, and maintaining my real estate brokerage's website, I decided to advance my web skills. I am pursuing an opportunity in tech as a Technical Editor. I have a strong attention to detail and many years of copy editing and proofreading experience. I am open to work in this capacity with any web development company or web development department of any organization, especially a non-profit, an online real estate firm, home design and decor firm, entertainment company, or book/literary entity.
-<br />
-<br />
-I received my M.F.A. in Creative Writing (Fiction emphasis) from National University and my B.A. in Social Sciences from Hollins University. My books are available through Amazon and other online stores. My latest novel is in progress.
+Based in Virginia, I am also an author and Realtor. After assuming the responsibilities of designing, developing, and maintaining the website for our real estate brokerage, I decided to advance my web skills. I am pursuing an opportunity in tech as a UX Designer and/or Content Editor. I have a strong attention to detail and many years of copy editing and proofreading experience. I am open to work with any web development company or web development department of any organization, especially a non-profit, an online real estate firm, home design and decor firm, entertainment company, or book/literary entity.
 <br />
 <br />
-When I'm not writing or coding, I enjoy using my time power walking, reading novels, trying new recipes, watching sports (<i>Go Braves! Go Steelers!</i>), getting lost in classic movies, and spending time with my family and our cats.😺
+I received my M.F.A. in Creative Writing (Fiction emphasis) from National University and my B.A. in Social Sciences from Hollins University. My books are available through Amazon. My latest novel is in progress.
+<br />
+<br />
+When I'm not writing or coding, I enjoy using my time power walking, reading novels, trying new recipes, watching sports (<i>Go Braves! Go Steelers!</i>), getting lost in classic movies and <i>Star Trek</i> 🖖🏽episodes , and spending time with my family and our cats.😺
 </p>
 
 </div>
