--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Tonya is a UX Designer and Content Editor based in Virginia. She is experienced in Copy Editing, HTML, CSS, and Bootstrap.">
+    <meta name="description" content="Tonya is a UX Designer and Content Editor based in Virginia. She is experienced in Copy Editing, HTML, CSS, Bootstrap, and Figma.">
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-1GZ8E1C7RN"></script>
 <script>
