--- a/work.html
+++ b/work.html
@@ -81,7 +81,7 @@
     </div>
     </div> -->
 
-    <div class="col-md-6"><a href="#"><img src="images/weather-app.PNG" alt="weather-project-preview" class="img-fluid shadow-md p-4 border rounded" height="374" /></a>
+    <div class="col-md-6"><a href="#"><img src="images/weather-app.PNG" alt="weather-project-preview" class="img-fluid shadow-md p-2 border rounded" height="374" /></a>
     <h3>Weather App</h3>
     <h6>Find out the weather in your area and around the world!</h6>
     <p>Created using HTML, CSS, Vanilla JS, Bootstrap, and API</p>
@@ -90,7 +90,7 @@
     </div>
   </div>
 
-  <div class="col-md-6"><a href="#"><img src="images/TCR-author-pg-UPDATED.PNG" alt="books-website-project-preview" class="img-fluid shadow-md p-2 border rounded" height="374" /></a>
+  <div class="col-md-6"><a href="#"><img src="images/trice-eden-homepage2.png" alt="books-website-project-preview" class="img-fluid shadow-md p-2 border rounded" height="376" /></a>
     <h3>Author Website</h3>
     <h6>Website about my books with links to purchase. Get your copies!</h6>
     <p>Created using HTML, CSS, Vanilla JS, Flexbox, and Figma</p>
@@ -120,14 +120,15 @@
   </div>
   
   <div class="row mt-3">
-    <div class="col-md-6"><a href="#"><img src="images/react-weather-app.PNG" alt="weather-react-project-preview" class="img-fluid shadow-md p-2 border rounded" /></a>
+    <!-- <div class="col-md-6"><a href="#"><img src="images/react-weather-app.PNG" alt="weather-react-project-preview" class="img-fluid shadow-md p-2 border rounded" /></a>
       <h3>React Weather App</h3>
       <h6>Another weather service app to find out the weather where you are or may be going.</h6>
       <p>Created using HTML, CSS, React.js, Bootstrap, and API</p>
       <div class="navigation-links text-center">
         <a href="https://nostalgic-hoover-d17535.netlify.app/" class="btn btn-branding mt-0 mb-3">Launch Weather App 2.0</a>
     </div>
-    </div>
+    </div> -->
+
     <div class="col-md-6"><a href="#"><img src="images/broker-website-1.PNG" alt="real-estate-website-project-preview" class="img-fluid shadow-md p-2 border rounded" height="374" /></a>
       <h3>Real Estate Broker Website</h3>
       <h6>Website for real estate broker, Marcus Rice.</h6>
@@ -138,9 +139,20 @@
     </div>
     </div>
 
+    <div class="col-md-6"><a href="#"><img src="images/TCR-realtor-homepage1.png" alt="real-estate-website-project-preview" class="img-fluid shadow-md p-2 border rounded" height="374" /></a>
+      <h3>Real Estate Agent Website</h3>
+      <h6>Website for real estate agent, Tonya Rice.</h6>
+      <p>Created using HTML, CSS, Bootstrap, Flexbox, and Figma</p>
+      <!-- make coming soon image if needed -->
+    <div class="navigation-links text-center">
+      <a href="https://www.tonyaricerealtor.com/" class="btn btn-branding mt-0 mb-5">Launch Real Estate Agent Website</a>
+    </div>
+    </div>
+
 </div>
 
-    <div class="row mt-3">
+
+    <!-- <div class="row mt-3">
     <div class="col-md-6"><a href="#"><img src="images/TCR-author-pg-UPDATED.PNG" alt="books-website-project-preview" class="img-fluid shadow-md p-2 border rounded" height="374" /></a>
       <h3>Author Website</h3>
       <h6>Website about my books with links to purchase. Get your copies!</h6>
@@ -149,16 +161,19 @@
       <a href="https://www.tonyarice.com/" class="btn btn-branding mt-0 mb-5">Launch Author Website</a>
     </div>
   </div>
+
   <div class="col-md-6"><a href="#"><img src="images/TCR-realtor-pg1.PNG" alt="real-estate-website-project-preview" class="img-fluid shadow-md p-2 border rounded" height="374" /></a>
     <h3>Real Estate Agent Website</h3>
     <h6>Website for real estate agent, Tonya Rice.</h6>
     <p>Created using HTML, CSS, Bootstrap, Flexbox, and Figma</p>
-    <!-- make coming soon image if needed -->
+    make coming soon image if needed
   <div class="navigation-links text-center">
     <a href="https://www.tonyaricerealtor.com/" class="btn btn-branding mt-0 mb-5">Launch Real Estate Agent Website</a>
   </div>
   </div>
-  </div>
+
+  </div> -->
+
 </div>
 </div>
 </div>
