--- a/about.html
+++ b/about.html
@@ -22,93 +22,133 @@
     <link rel="stylesheet" href="/src/styles.css" />
 </head>
 <body>
-    <div class="nav-bar container">
-        <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark transparent">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="/">Tonya Rice</a>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarNav"
-              aria-controls="navbarNav"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" href="/">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/about.html">About</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/work.html">Work</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="https://www.tonyarice.com/" target="_blank">Books</a>
-                  </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/contact.html">Contact</a>
-                  </li>
-                  <li>
-                    <a class="nav-link" href="https://github.com/tonyarice" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>
-                    </a>
-                  </li>
-              </ul>
-            </div>
-          </div>
-        </nav> 
+  <div class="nav-bar container">
+      
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark transparent">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/"><img src="/images-5/TCR DevLogo1-transparent.png" alt="" width="45" height="45" alt="Tonya Rice logo"></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/work ux.html">Work</a>
+            </li>
+            <!-- <li class="nav-item">
+              <a class="nav-link" href="/work ux.html">UX Designs</a>
+            </li> -->
+            <!-- <li class="nav-item">
+                <a class="nav-link" href="https://www.tonyarice.com/" target="_blank">Books</a>
+              </li>  -->
+              <!-- or link to project page -->
+            <li class="nav-item">
+                <a class="nav-link" href="/contact.html">Contact</a>
+              </li>
+              <li>
+              <a class="nav-link" href="https://github.com/tonyarice" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav> 
+
 </div>
 
 <div class="about-section container transparent-field">
   <h2>Profile - Tonya Rice</h2>
 
+  <div class="row">
+  <div class="col-lg-3 mt-1 mb-3">
+    <img src="images/tcrpic1.jpg" width="600" height="325" alt="tonya rice" title="Tonya Rice, Web Designer, Content Editor, Author" class="about-pic img-fluid">
+  </div>
+
+<div class="col-md-9 mt-1 mb-3">
 <div class="white-text">
-<p>I am a UX Designer and Content Editor, experienced in HTML, CSS, Vanilla JS, React.js, Bootstrap, CSS Grid, Flexbox, Git, GitHub, API, SEO, and Responsive Web Design. I also work with Figma and Canva for design enhancement. My certifications from SheCodes Workshops include Front End Development, React Development, and Responsive Web Design. <br />
+<p>I am a Web Designer and Content Editor, experienced in Figma and Adobe XD. As a front-end developer, I also work with HTML, CSS, Vanilla JS, React.js, Bootstrap, CSS Grid, Flexbox, Git, GitHub, API, SEO, and Responsive Web Design. I am working towards my Google UX Design Professional Certificate.  My certifications from <a href="https://www.shecodes.io/graduates/19912-tonya-rice">SheCodes Workshops</a> include Front End Development, React Development, and Responsive Web Design. <br />
 <br />
-Based in Virginia, I am also an author and Realtor. After assuming the responsibilities of designing, developing, and maintaining the website for our real estate brokerage, I decided to advance my web skills. I am pursuing an opportunity in tech as a UX Designer and/or Content Editor. I have a strong attention to detail and many years of copy editing and proofreading experience. I am open to work with any web development company or web development department of any organization, especially a non-profit, an online real estate firm, home design and decor firm, entertainment company, or book/literary entity.
+Based in Virginia, I am also an author and Realtor, known for demonstrating superior interpersonal skills, empathy, and the ability to influence clear and effectual communication between staff, business partners, and customers. After assuming the responsibilities of designing, developing, and maintaining the website for our real estate brokerage, I decided to advance my web skills. I have a strong attention to detail and many years of copy editing and proofreading experience, which are also a part of my content editing responsibilities. 
 <br />
 <br />
-I received my M.F.A. in Creative Writing (Fiction emphasis) from National University and my B.A. in Social Sciences from Hollins University. My books are available through Amazon. My latest novel is in progress.
+<strong>I am pursuing an opportunity in tech as a Web Designer. I am also interested in continuing my work in content editing. I am open to work with any web development company or web development department of any organization, especially a non-profit, an online real estate firm, home design and decor firm, entertainment company, or book/literary entity.</strong>
+<br />
+<br />
+I received my M.F.A. in Creative Writing (Fiction emphasis) from National University and my B.A. in Social Sciences from Hollins University. <a href="https://www.tonyarice.com">My books</a> are available through Amazon and my latest novel is in progress.
 <br />
 <br />
 When I'm not writing or coding, I enjoy using my time power walking, reading novels, trying new recipes, watching sports (<i>Go Braves! Go Steelers!</i>), getting lost in classic movies and <i>Star Trek</i> 🖖🏽episodes, and spending time with my family and our cats.😺
+<br/>
+Links to my website work are located below... I look forward to hearing from you to discuss how we can work together.
 </p>
-
+</div>
 </div>
 
-<div class="container">
+<!-- <div class="col text-center">
+  <a href="/work ux.html" class="btn btn-branding mt-3" id="ux-btn">UX Designs</a>
+
+  <a href="/work.html" class="btn btn-branding mt-3" id="websites-btn">Websites</a>
+
+  <a href="https://www.tonyarice.com" class="btn btn-branding mt-3" id="books-btn">Books</a>
+
+  <a href="/certifications.html" class="btn btn-branding mt-3" id="cert-btn">Certifications</a>
+
+  <a href="#" class="btn btn-branding mt-3">Resume</a>
+</div> -->
+
+<div class="about-buttons container text-center">
+  <!-- <a class="btn btn-branding mt-3" href="/work ux.html" role="button" id="ux-btn">UX Designs</a>  -->
+
+  <a class="btn btn-branding mt-3" href="/work.html" role="button" id="websites-btn">Resume</a>
+
+  <a class="btn btn-branding mt-3" href="https://www.tonyarice.com" role="button" id="books-btn">Web Development</a>
+
+  <a class="btn btn-branding mt-3" href="/certifications.html" role="button" id="cert-btn">Writing Portfolio</a>
+
+  <a class="btn btn-branding mt-3" href="#" role="button">Author Site</a>
+</div>
+<br />
+</div>
+<br />
+
+
+
+<!-- <div class="container">
   <div class="row justify-content-center">
-<div class="col-1">
-  <a href="/work.html" class="btn btn-branding mt-3">Work</a>
+<div class="col-3">
+  <a href="#" class="btn btn-branding mt-3">UX Designs</a>
+</div>
+<div class="col-3">
+  <a href="#" class="btn btn-branding mt-3">Websites</a>
+</div>
+<div class="col-3">
+  <a href="https://wwww.tonyarice.com" class="btn btn-branding mt-3">Books</a>
+</div>
+<div class="col-3">
+  <a href="/certifications.html" class="btn btn-branding mt-3">Certifcations</a>
 </div>
 </div>
-</div>
+</div> -->
 
 <hr />
-        <div class="certifications container text-center">
-          <div class="row">
-          <p class="mb-2 white-text transparent-field">Certifications</p>
-        </div>
-        <div class="row">
-          <div class="col-md-6"><a href="https://www.shecodes.io/certificates/2d81789492e34e9147a4d291d9370915"><img src="images/shecodes1.png" alt="basics-cert" class="img-fluid shadow-md p-2 border rounded" /></a>
-          </div>
-          <div class="col-md-6"><a href="https://www.shecodes.io/certificates/5a8e5c0815342c9d3ec6139d5f3ef5a5"><img src="images/shecodes2.png" alt="plus-cert" class="img-fluid shadow-md p-2 border rounded" /></a>
-          </div>
-          <div class="col-md-6"><a href="https://www.shecodes.io/certificates/6ac9c4caa92e33962deac521a25b0ddb"><img src="images/shecodes3.png" alt="react-cert" class="img-fluid shadow-md p-2 border rounded" /></a>
-          </div>
-          <div class="col-md-6"><a href="https://www.shecodes.io/certificates/71e571236da5f7b0d8a4691b4cb823fa"><img src="images/shecodes4.png" alt="responsive-cert" class="img-fluid shadow-md p-2 border rounded" /></a>
-          </div>
-          </div>
-        </div>
-      </div>
-    <!-- </div>
-  </div>
-  </div> -->
+
+
+    </div> 
+
 
 
 <footer>
@@ -132,6 +172,12 @@ When I'm not writing or coding, I enjoy using my time power walking, reading nov
     <a href="https://github.com/tonyarice" title="Github Profile"><i class="fa fa-github" aria-hidden="true"></i></a>
     
   </div>
+
+  <div class="footer-home">
+    <div>
+      <a class="navbar-brand" href="/"><img src="/images-5/TCR DevLogo1-transparent.png" alt="" width="45" height="45" alt="Tonya Rice logo"></a>
+    </div>
+    </div>
 </footer>
 
 <!-- <footer>
