Updated link to about page
Updated link to about page on menus

--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
     <div class="dev-info container">
     <div>
     <h1>Tonya Rice</h1>
-    <h2>UX/UI Designer | Content Editor</h2>
+    <h2>Website Developer | Content Editor</h2>
     </div>
     <div class="col text-center">
-    <a href="/work ux.html" class="btn btn-branding mt-3" id="work-btn">My Work</a>
+    <a href="/work.html" class="btn btn-branding mt-3" id="work-btn">My Work</a>
     <a href="/contact.html" class="btn btn-branding mt-3">Contact Me</a>
   </div>
   
