--- a/books.html
+++ b/books.html
@@ -23,7 +23,7 @@
     <div class="nav-bar container">
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark transparent">
           <div class="container-fluid">
-            <a class="navbar-brand" href="/">Tonya Rice</a>
+            <a class="navbar-brand" href="/index.html">Tonya Rice</a>
             <button
               class="navbar-toggler"
               type="button"
