--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="About Tonya Rice. Tonya is a UX Designer and Content Editor based in Virginia.">
+    <meta name="description" content="About Tonya Rice. Tonya is a Website Developer and Content Editor based in Virginia. Contact her to develop your website, make sure your content is top-notch, and enhance your brand.">
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-1GZ8E1C7RN"></script>
 <script>
@@ -14,7 +14,7 @@
 
   gtag('config', 'G-1GZ8E1C7RN');
 </script>
-    <title>About Tonya Rice | UX Designer, Content Editor</title>
+    <title>About Tonya Rice | Website Developer, Content Editor</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -26,7 +26,7 @@
       
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark transparent">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/"><img src="/images-5/TCR DevLogo1-transparent.png" alt="" width="45" height="45" alt="Tonya Rice logo"></a>
+        <a class="navbar-brand" href="/index.html"><img src="/images-5/TCR DevLogo1-transparent.png" alt="" width="45" height="45" alt="Tonya Rice logo"></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -41,7 +41,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/about.html">About</a>
@@ -82,7 +82,7 @@
 <div class="white-text">
 <p>I am a Web Designer and Content Editor, experienced in Figma and Adobe XD. As a front-end developer, I also work with HTML, CSS, Vanilla JS, React.js, Bootstrap, CSS Grid, Flexbox, Git, GitHub, API, SEO, and Responsive Web Design. I am working towards my Google UX Design Professional Certificate.  My certifications from <a href="https://www.shecodes.io/graduates/19912-tonya-rice">SheCodes Workshops</a> include Front End Development, React Development, and Responsive Web Design. <br />
 <br />
-Based in Virginia, I am also an author and Realtor, known for demonstrating superior interpersonal skills, empathy, and the ability to influence clear and effectual communication between staff, business partners, and customers. After assuming the responsibilities of designing, developing, and maintaining the website for our real estate brokerage, I decided to advance my web skills. I have a strong attention to detail and many years of copy editing and proofreading experience, which are also a part of my content editing responsibilities. 
+Based in Virginia, I am also an author and Realtor, known for demonstrating superior interpersonal skills, empathy, and the ability to influence clear and effectual communication between staff, business partners, and customers. After assuming the responsibilities of designing, developing, and maintaining the website for our real estate brokerage, I decided to advance my web skills. I have a strong attention to detail and many years of structural editing, copy editing, and proofreading experience, which are also a part of my content editing responsibilities. 
 <br />
 <br />
 <strong>I am pursuing an opportunity in tech as a Web Designer. I am also interested in continuing my work in content editing. I am open to work with any web development company or web development department of any organization, especially a non-profit, an online real estate firm, home design and decor firm, entertainment company, or book/literary entity.</strong>
