--- a/certifications.html
+++ b/certifications.html
@@ -48,7 +48,7 @@
               <a class="nav-link" href="/about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/work ux.html">Work</a>
+              <a class="nav-link" href="/work.html">Work</a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link" href="/work ux.html">UX Designs</a>
