--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Tonya is a UX Designer and Content Editor based in Virginia. She is experienced in Copy Editing, HTML, CSS, Bootstrap, and Figma.">
+    <meta name="description" content="Tonya Rice is a Website Designer and Content Editor based in Virginia. She is experienced in HTML, CSS, Bootstrap, and Figma, as well as structural editing, copy editing, and proofreading.">
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-1GZ8E1C7RN"></script>
 <script>
@@ -29,7 +29,7 @@
       
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark transparent">
           <div class="container-fluid">
-            <a class="navbar-brand" href="/"><img src="/images-5/TCR DevLogo1-transparent.png" alt="" width="45" height="45" alt="Tonya Rice logo"></a>
+            <a class="navbar-brand" href="/index.html"><img src="/images-5/TCR DevLogo1-transparent.png" alt="" width="45" height="45" alt="Tonya Rice logo"></a>
             <button
               class="navbar-toggler"
               type="button"
@@ -44,13 +44,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/">Home</a>
+                  <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/about.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/work ux.html">Work</a>
+                  <a class="nav-link" href="/work.html">Work</a>
                 </li>
                 <!-- <li class="nav-item">
                   <a class="nav-link" href="/work ux.html">UX Designs</a>
@@ -114,7 +114,7 @@
           target="_blank"
           class="hyperlink-line"
           >Netlify</a
-        > | © 2021 - 2023
+        > | © 2021 - 2024
         </span>
         <br />
           <span class="photo-credit white-text">Photo by Marcus Rice</span>
