--- a/work.html
+++ b/work.html
@@ -14,7 +14,7 @@
 
   gtag('config', 'G-1GZ8E1C7RN');
 </script>
-    <title>Featured Projects | Tonya Rice - UX Designer, Content Editor</title>
+    <title>Featured Projects | Tonya Rice - Website Developer, Content Editor</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -27,7 +27,7 @@
       
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark transparent">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/"><img src="/images-5/TCR DevLogo1-transparent.png" alt="" width="45" height="45" alt="Tonya Rice logo"></a>
+        <a class="navbar-brand" href="/index.html"><img src="/images-5/TCR DevLogo1-transparent.png" alt="" width="45" height="45" alt="Tonya Rice logo"></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -42,13 +42,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/work ux.html">Work</a>
+              <a class="nav-link" href="/work.html">Work</a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link" href="/work ux.html">UX Designs</a>
