--- a/work.html
+++ b/work.html
@@ -169,7 +169,7 @@
     <p>Created using HTML, CSS, and Bootstrap</p>
     <!-- make coming soon image if needed -->
   <div class="navigation-links text-center">
-    <a href="https://www.marcusrice.net" class="btn btn-branding mt-0 mb-5">Launch Historical Website</a>
+    <a href="https://splendid-torte-b6267b.netlify.app/" class="btn btn-branding mt-0 mb-5">Launch Historical Website</a>
   </div>
   </div>
 
