--- a/about.html
+++ b/about.html
@@ -93,6 +93,8 @@ I received my M.F.A. in Creative Writing (Fiction emphasis) from National Univer
 <br />
 When I'm not writing or coding, I enjoy using my time power walking, reading novels, trying new recipes, watching sports (<i>Go Braves! Go Steelers!</i>), getting lost in classic movies and <i>Star Trek</i> 🖖🏽episodes, and spending time with my family and our cats.😺
 <br/>
+I am confident that my web skills and content editing, along with my attention to detail, strong project management skills, ability to analyze data, and my passion for producing high-quality work will contribute to the success of your team.
+<br/>
 Links to my website work are located below... I look forward to hearing from you to discuss how we can work together.
 </p>
 </div>
@@ -113,9 +115,9 @@ Links to my website work are located below... I look forward to hearing from you
 <div class="about-buttons container text-center">
   <!-- <a class="btn btn-branding mt-3" href="/work ux.html" role="button" id="ux-btn">UX Designs</a>  -->
 
-  <a class="btn btn-branding mt-3" href="/work.html" role="button" id="websites-btn">Resume</a>
+  <a class="btn btn-branding mt-3" href="https://triceportfolio.awsapps.com/workdocs/index.html#/document/65b1780595460de42cf2fdd4e4f615bed1a5f6517a65c97922ee3ccdc934b4a7" role="button" id="websites-btn">Resume</a>
 
-  <a class="btn btn-branding mt-3" href="https://www.tonyarice.com" role="button" id="books-btn">Web Development</a>
+  <a class="btn btn-branding mt-3" href="/work.html" role="button" id="books-btn">Web Development</a>
 
   <a class="btn btn-branding mt-3" href="/certifications.html" role="button" id="cert-btn">Writing Portfolio</a>
 
