--- a/about.html
+++ b/about.html
@@ -115,11 +115,11 @@ Links to my website work are located below... I look forward to hearing from you
 <div class="about-buttons container text-center">
   <!-- <a class="btn btn-branding mt-3" href="/work ux.html" role="button" id="ux-btn">UX Designs</a>  -->
 
-  <a class="btn btn-branding mt-3" href="https://triceportfolio.awsapps.com/workdocs/index.html#/document/65b1780595460de42cf2fdd4e4f615bed1a5f6517a65c97922ee3ccdc934b4a7" role="button" id="websites-btn">Resume</a>
+  <a class="btn btn-branding mt-3" href="https://triceportfolio.awsapps.com/workdocs/index.html#/document/65b1780595460de42cf2fdd4e4f615bed1a5f6517a65c97922ee3ccdc934b4a7" role="button" id="websites-btn" target="_blank">Professional Experience</a>
 
-  <a class="btn btn-branding mt-3" href="/work.html" role="button" id="books-btn">Web Development</a>
+  <a class="btn btn-branding mt-3" href="/work.html" role="button" id="books-btn" target="_blank">Web Development</a>
 
-  <a class="btn btn-branding mt-3" href="/certifications.html" role="button" id="cert-btn">Writing Portfolio</a>
+  <a class="btn btn-branding mt-3" href="/certifications.html" role="button" id="cert-btn" target="_blank">Writing Portfolio</a>
 
   <a class="btn btn-branding mt-3" href="#" role="button">Author Site</a>
 </div>
