Added writing portfolio links
Added writing portfolio links to about and work pages

--- a/about.html
+++ b/about.html
@@ -119,9 +119,9 @@ Links to my website work are located below... I look forward to hearing from you
 
   <a class="btn btn-branding mt-3" href="/work.html" role="button" id="books-btn" target="_blank">Web Development</a>
 
-  <a class="btn btn-branding mt-3" href="/certifications.html" role="button" id="cert-btn" target="_blank">Writing Portfolio</a>
+  <a class="btn btn-branding mt-3" href="https://lively-taffy-8fe4e7.netlify.app" role="button" id="cert-btn" target="_blank">Writing Portfolio</a>
 
-  <a class="btn btn-branding mt-3" href="#" role="button">Author Site</a>
+  <a class="btn btn-branding mt-3" href="https://www.tonyarice.com" role="button" target="_blank">Author Site</a>
 </div>
 <br />
 </div>
