--- a/work.html
+++ b/work.html
@@ -179,7 +179,7 @@
     <p>Created using HTML, CSS, Bootstrap, Flexbox, and Figma</p>
     <!-- make coming soon image if needed -->
   <div class="navigation-links text-center">
-    <a href="https://www.tonyaricerealtor.com/" class="btn btn-branding mt-0 mb-5">Launch Writing Portfolio</a>
+    <a href="https://lively-taffy-8fe4e7.netlify.app" class="btn btn-branding mt-0 mb-5">Launch Writing Portfolio</a>
   </div>
   </div>
 
@@ -223,7 +223,7 @@
     <div class="row">
       
       <div class="navigation-links text-center">
-        <a href="https://www.tonyaricerealtor.com/" class="btn btn-branding p-3 mt-0 mb-5"><h3>Click to Portfolio</h3></a>
+        <a href="https://lively-taffy-8fe4e7.netlify.app" class="btn btn-branding p-3 mt-0 mb-5"><h3>Click to Portfolio</h3></a>
       </div>
       
   </div>
