updated photo credit and photo
updated photo credit and about picture

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Tonya Rice is a Website Designer and Content Editor based in Virginia. She is experienced in HTML, CSS, Bootstrap, and Figma, as well as structural editing, copy editing, and proofreading.">
+    
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-1GZ8E1C7RN"></script>
 <script>
@@ -14,6 +15,7 @@
 
   gtag('config', 'G-1GZ8E1C7RN');
 </script>
+
     <title>Tonya Rice | UX Designer, Content Editor</title>
     <link rel="icon" href="images-5/TCR DevLogo1-transparent.png" />
 
@@ -120,7 +122,7 @@
         > | © 2021 - 2024
         </span>
         <br />
-          <span class="photo-credit white-text">Photo by Marcus Rice</span>
+          <!-- <span class="photo-credit white-text">Photo by Marcus Rice</span> -->
         </small></p>
       </div>  
       
